--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,10 @@ jobs:
 
       - name: Run Docker Build
         run: |
-          docker build -t "$REGISTRY_URL/cgit-nginx" .
+          docker build -t "$REGISTRY_URL/cgit" .
 
       - name: Log in to Docker Registry
         run: echo "$REGISTRY_PASSWORD" | docker login "$REGISTRY_URL" -u "$REGISTRY_USERNAME" --password-stdin
 
       - name: Push Docker Image
-        run: docker push "$REGISTRY_URL/cgit-nginx"
+        run: docker push "$REGISTRY_URL/cgit"
